--- a/course/course.html
+++ b/course/course.html
@@ -5,15 +5,15 @@
 	<head>
 		<title></title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/course.css">
+		<link rel="stylesheet" href="course.css">
+		
 	</head>
 	
 	<body class="course">
-		<header class="nav">
-			<div class="container-wide">
-				<ul class="primary-links">
+		<header class="primary-nav-desktop">
+				<ul class="primary-nav-links">
 					<li>
-						<div class="dropdown-menu-toggle">
+						<a href="#" class="dropdown-menu-toggle">
 							HTML &amp; CSS, SASS
 							<div class="dropdown-menu center is-hidden">
 								<ul>
@@ -27,18 +27,26 @@
 					<li><a>About</a></li>
 					<li><a>Contact</a></li>
 				</ul>
-			</div>
 		</header>
 		<div class="cta">Bring a friend, and you'll both get £20 off</div>
 		<div class="masthead">
-				<div class="container-wide">
-					<p>HTML & CSS</p>
-					<h1>For Beginners</h1>
-					<p>1 day course, part 1 of 3</p>
-				</div>
+			<div class="container-wide">
+				<p>HTML & CSS</p>
+				<h1>For Beginners</h1>
+				<p>1 day course, part 1 of 3</p>
 			</div>
+		</div>
+
+
 		<div class="container-wide">
-			
+			<div class="secondary-nav">
+				<ul>
+					<li><a href="#">Test</a></li>
+					<li><a href="#">Test</a></li>
+					<li><a href="#">Test</a></li>
+					<li><a href="#">Test</a></li>
+				</ul>
+			</div>
 			<div class="flex-row">
 				
 				<div class="columns-7 typography">
